--- a/Portfolio/pom.xml
+++ b/Portfolio/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>Portfolio</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Portfolio</name>
-	<description>A portfolio website to showcase Maxwell Coleman's prior work and skillset.</description>
+	<description>A portfolio website to showcase Maxwell Coleman's prior work and skillset.  </description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -21,9 +21,15 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
